# leaf

./: .drone.jsonnet  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  README-bazel.md  README.adoc  README.md  WORKSPACE  appveyor.yml  build.jam  conanfile.py  gh-pages.sh  index.html  leaf.adoc  leaf.hpp  meson.build  meson_options.txt  wasm.txt  zajo-light.css
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml  gh-pages.yml
adoc/: README.adoc  gh-pages.sh  zajo.css
adoc/synopses/: common.adoc  current_exception_diagnostic_output.adoc  error.adoc  error_capture.adoc  exception.adoc  expect.adoc  preload-defer.adoc  result.adoc
benchmark/: benchmark.md  deep_stack_leaf.cpp  deep_stack_other.cpp  deep_stack_outcome.cpp
doc/: .gitignore  Jamfile  docinfo.html  leaf.adoc  rouge-github.css  whitepaper.md  zajo-dark.css  zajo-light.css  zajo.css
doc/synopses/: capture_exception.adoc  capture_result.adoc  common.adoc  diagnostic_output_current_exception.adoc  error.adoc  error_capture.adoc  error_code.adoc  exception.adoc  exception_capture.adoc  exception_to_result.adoc  expect.adoc  handle.adoc  preload.adoc  result.adoc  throw.adoc  try.adoc
example/: BUILD.bazel  asio.cpp  asio_beast_leaf_rpc.cpp  capture_eh.cpp  capture_in_exception.cpp  capture_in_result.cpp  capture_result.cpp  dynamic_capture_eh.cpp  dynamic_capture_result.cpp  error_log.cpp  error_trace.cpp  exception_to_result.cpp  lua_callback_eh.cpp  lua_callback_exceptions.cpp  lua_callback_result.cpp  print_file.cpp  print_file_ec.cpp  print_file_eh.cpp  print_file_result.cpp  print_half.cpp  readme.md  return_exception.cpp  transport_between_threads.cpp  transport_ec.cpp  transport_eh.cpp  try_capture_all_eh.cpp  try_capture_all_exceptions.cpp  try_capture_all_result.cpp
example/print_file/: print_file_eh.cpp  print_file_exceptions.cpp  print_file_leaf_result.cpp  print_file_outcome_result.cpp  print_file_result.cpp  print_file_system_result.cpp  readme.md
examples/: asio_beast_leaf_rpc.cpp  capture_in_exception.cpp  capture_in_result.cpp  error_log.cpp  error_trace.cpp  exception_to_result.cpp  lua_callback_eh.cpp  lua_callback_result.cpp  print_file_eh.cpp  print_file_eh_error_tags.cpp  print_file_outcome_result.cpp  print_file_result.cpp  print_file_result_error_tags.cpp  print_half.cpp  readme.md
examples/print_file/: print_file_eh.cpp  print_file_eh_error_tags.cpp  print_file_outcome_result.cpp  print_file_result.cpp  print_file_result_error_tags.cpp  readme.md
include/: BUILD.bazel  generate_single_header.py  leaf.hpp
include/boost/: leaf.hpp
include/boost/leaf/: all.hpp  boost_exception_support.hpp  capture.hpp  capture_exception.hpp  capture_in_exception.hpp  capture_in_result.hpp  capture_result.hpp  captured_result.hpp  common.hpp  config.hpp  context.hpp  current_exception_diagnostic_information.hpp  current_exception_diagnostic_output.hpp  diagnostic_information.hpp  diagnostic_output.hpp  diagnostic_output_current_exception.hpp  diagnostics.hpp  error.hpp  error_capture.hpp  error_code.hpp  exception.hpp  exception_capture.hpp  exception_to_result.hpp  expect.hpp  expected.hpp  handle.hpp  handle_all.hpp  handle_error.hpp  handle_errors.hpp  handle_exception.hpp  handle_some.hpp  has_current_error.hpp  on_error.hpp  pred.hpp  preload.hpp  put.hpp  result copy.hpp  result.hpp  serialize.hpp  throw.hpp  (+5 more)
include/boost/leaf/config/: tls.hpp  tls_array.hpp  tls_cpp11.hpp  tls_freertos.hpp  tls_globals.hpp  tls_win32.hpp  visibility.hpp
include/boost/leaf/detail/: all.hpp  capture_list.hpp  captured_exception.hpp  captured_info.hpp  capturing_exception.hpp  config.hpp  ctx_catch.hpp  ctx_nocatch.hpp  demangle.hpp  diagnostic_print.hpp  diagnostics_writer.hpp  dynamic_store.hpp  dynamic_store_impl.hpp  encoder.hpp  exception_base.hpp  function_traits.hpp  handle.hpp  handle_error.hpp  handler_argument_traits.hpp  leaf.hpp  mp11.hpp  optional.hpp  print.hpp  print_exception_info.hpp  result_traits.hpp  static_store.1.hpp  static_store.hpp  teleport.hpp  throw.hpp  throw_exception.hpp  tl_slot.hpp  tls_cpp11.hpp  tls_freertos.hpp  tls_globals.hpp  tls_index.hpp  tuple.hpp  type_name.hpp  unexpected.hpp  writer.hpp
include/boost/leaf/serialization/: boost_json_encoder.hpp  diagnostics_writer.hpp  json_encoder_boost.hpp  json_encoder_nlohmann.hpp  json_writer.hpp  json_writer_boost.hpp  json_writer_nlohmann.hpp  nlohmann_json_encoder.hpp  nlohmann_writer.hpp  type_name.hpp  writer.hpp
meta/: libraries.json
scripts/: download_nlohmann_json.py  generate_single_header.py
test/: BOOST_LEAF_ASSIGN_test.cpp  BOOST_LEAF_AUTO_test.cpp  BOOST_LEAF_CHECK_test.cpp  BOOST_LEAF_VAR_test.cpp  BUILD.bazel  Jamfile.v2  _compile-fail-BOOST_LEAF_ASSIGN.cpp  _compile-fail-BOOST_LEAF_AUTO.cpp  _compile-fail-arg_boost_error_info_1.cpp  _compile-fail-arg_boost_error_info_2.cpp  _compile-fail-arg_catch_1.cpp  _compile-fail-arg_catch_2.cpp  _compile-fail-arg_match_1.cpp  _compile-fail-arg_match_2.cpp  _compile-fail-arg_rvalue_ref.cpp  _compile-fail-diagnostic_details.cpp  _compile-fail-diagnostic_info.cpp  _compile-fail-error_info.cpp  _compile-fail-error_obj_ptr.cpp  _compile-fail-exception_1.cpp  _compile-fail-exception_2.cpp  _compile-fail-new_error.cpp  _compile-fail-nlohmann.cpp  _compile-fail-result_1.cpp  _compile-fail-result_2.cpp  _compile-fail-result_3.cpp  _compile-fail-result_4.cpp  _compile-fail-serialization_boost_json_encoder.cpp  _compile-fail-serialization_json_encoder_boost.cpp  _compile-fail-serialization_json_encoder_nlohmann.cpp  _compile-fail-serialization_nlohmann_json_encoder.cpp  _compile-fail-to_json.cpp  _compile-fail-verbose_diagnostic_info.cpp  _hpp_all_test.cpp  _hpp_capture_exception_test.cpp  _hpp_capture_in_exception_test.cpp  _hpp_capture_in_result_test.cpp  _hpp_capture_result_test.cpp  _hpp_capture_test.cpp  _hpp_common_test.cpp  (+275 more)
test/boost/core/: lightweight_test.hpp
