option('leaf_standalone',type:'boolean',value:true,description:'Enable LEAF to be used independently of Boost')
option('leaf_lua',type:'boolean',value:false,description:'Enable or disable downloading of Lua and building the Lua examples')
option('leaf_all_hpp',type:'boolean',value:false,description:'Enable or disable the automatic generation of include/boost/leaf/all.hpp')
option('leaf_diagnostics',type:'integer',value:1,description:'BOOST_LEAF_DIAGNOSTICS value')
option('leaf_suppress_warnings',type:'boolean',value:true,description:'Suppress compiler warnings (#pragma system_header)')
